# ThatsALotOfBees

./: Cargo.toml  index.html  my-file
.github/workflows/: rust.yml
assets/images/: Backdrop.psd  Bee.psd  Birb.psd  BuildMenu.psd  Buildings.psd  Bumble.psd  ButtonTextures.psd  CounterMenu.psd  Hive.psd  NexusMenu.psd  OrderMenu.psd  Reactor.psd  ReactorMenu.psd  Resources.psd  Tree.psd  Wasp.psd
assets/shaders/: bee.wgsl  bee_ui.wgsl  building.wgsl  wasp.wgsl
assets/shaders/common/: bee.wgsl  common.wgsl  uvdxdy.wgsl
assets/shaders/vertex/: uvdxdy.wgsl
src/: main.rs
src/core/: audio.rs  camera.rs  input.rs  mod.rs
src/core/builder/: hive.rs  mod.rs
src/core/model/: bee.rs  bee_material.rs  buildings.rs  currency.rs  enemy.rs  hive.rs  living_creature.rs  material.rs  mod.rs  movement.rs  physcis.rs  wasp.rs
src/core/model/behaviours/: baby.rs  bees.rs  buildings.rs  mod.rs  nexus.rs  queen.rs  universal_behaviour.rs  wasps.rs
src/core/navigation/: hive_graph.rs  hive_map.rs  mod.rs  navigation_target.rs  precomputed.rs
src/core/physics/: collision.rs  mod.rs  solver.rs
src/core/ui/: building_menu.rs  button.rs  constants.rs  counter.rs  currency_display.rs  mod.rs  moving_ui.rs
src/core/ui/menu/: building_menu.rs  mod.rs  title.rs  upgrade_menu.rs
src/levels/: mod.rs
src/utils/: direction.rs  fps.rs  mod.rs  vec_helpers.rs
