[package]
name = "bevy-jam-4"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev = ["bevy/file_watcher"]


[dependencies]
bevy = {version = "0.12.0", features = ["serialize"]}
serde = { version = "*" }
serde_json = { version = "*" }
strum = "*"
strum_macros = "*"
bitflags = "2.4"
rand = "0.8"
delaunator = "1.0"
